GDW-202 #test #time 30m #comment fix alignment

--- a/src/app/acp-flow/enrollment-add-new-line/enrollment-add-new-line.component.scss
+++ b/src/app/acp-flow/enrollment-add-new-line/enrollment-add-new-line.component.scss
@@ -5,33 +5,29 @@
     .enrollment-new-line-page {
         display: block !important;
         margin-top: 60px;
-        padding: 0 10%;
+        padding-bottom: 60px;
         @media (min-width: $phablet-min-width) {
             display: flex;
         }
-        @media (max-width: $desktop-min-width-minus) {
-            padding: 0 20px;
-        }
+       
         @media (max-width: $phablet-min-width-minus) {
-            padding: 0 16px;
+            margin-top: 32px;
+            padding-bottom: 32px;
         }
+       
         .title {
-            font-size: 32px;
-            line-height: 40px;
-            font-weight: bold;
-            margin-bottom: 40px;
-            font-family: $secondary-font-family-bold;
+            font-family: $base-font-family-bold;
+            color: $header-color;
             @media (max-width: $phablet-min-width-minus) {
-                font-size: 24px;
-                line-height: 32px;
                 margin-bottom: 24px;
             }
         }
         .success-acp-banner {
-            background: #e6f7ee;
-            box-shadow: 0px 3px 4px rgba(234, 234, 234, 0.25);
-            border-radius: 8px;
-            padding: 28px 26px;
+            padding: 24px;
+            margin-top: 16px;
+            box-shadow: 0px 4px 15px rgba(206, 211, 214, 0.6);
+            border-radius: 0px 0px 10px 10px;
+            background-color: #EBFAEE;
             display: flex;
             justify-content: flex-start;
             margin-bottom: 40px;
@@ -154,14 +150,7 @@
         }
         .compatability-section {
             .main-title {
-                font-size: 24px;
-                line-height: 32px;
-                font-family: $secondary-font-family-bold;
                 margin-bottom: 12px;
-                @media (max-width: $phablet-min-width-minus) {
-                    font-size: 20px;
-                    line-height: 28px;
-                }
             }
             .sub-desc {
                 font-size: 18px;
@@ -1079,76 +1068,50 @@
     }
     .navigation-section {
         border-top: 1px solid #e3e3ea;
-        padding: 16px 80px;
-        display: flex;
-        justify-content: space-between;
+        padding: 16px 0px;
+        // display: flex;
+        // justify-content: space-between;
         align-items: center;
         background-color: #ffffff;
         position: sticky;
         z-index: 2;
         bottom: 0;
         width: 100%;
-        &.end {
-            justify-content: flex-end;
-        }
-        .left {
-            .no-border {
-                color: $primary-color;
-                font-size: 20px;
-                line-height: 20px;
-                font-family: $secondary-font-family-bold;
-                font-weight: 700;
-                margin-bottom: 0;
-                cursor: pointer;
-                @media (max-width: $phablet-min-width-minus) {
-                    font-size: 16px;
-                    line-height: 16px;
+        .navs {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            .right {
+                display: flex;
+                gap: 8px;
+                &.end{
+                    justify-content: flex-end;
                 }
             }
+           
         }
-        .right {
-            padding: 0 30px;
-            cursor: pointer;
-            font-family: $secondary-font-family-bold;
+        &.last {
+            justify-content: flex-end;
         }
+
         .button {
-            font-size: 20px;
-            line-height: 20px;
-            padding: 8px 35px;
-            font-family: $secondary-font-family-bold;
             font-weight: 700;
             cursor: pointer;
-            &.secondary {
-                margin-right: 16px;
-            }
-            @media (max-width: $phablet-min-width-minus) {
-                font-size: 16px;
-                line-height: 16px;
-            }
-        }
-        .disabled {
-            cursor: not-allowed;
-            color: white;
-            background-color: #863399;
-        }
-        @media (max-width: $desktop-min-width-minus) {
-            padding: 20px 20px 30px;
-            .right {
+            &.thirdly {
                 padding: 0;
+                text-align: left;
             }
         }
-        @media (max-width: $phablet-min-width-minus) {
-            padding: 16px 10px 24px;
-        }
+
     }
     .plan-purchased-banner {
         display: flex;
         align-items: flex-start;
         padding: 24px;
         max-width: 915px;
-        background: #e6f7ee;
-        box-shadow: 0px 3px 4px rgba(234, 234, 234, 0.25);
-        border-radius: 8px;
+        box-shadow: 0px 4px 15px rgba(206, 211, 214, 0.6);
+        border-radius: 0px 0px 10px 10px;
+        background-color: #EBFAEE;
         width: 100%;
         margin-bottom: 32px;
         img {
